[package]
name = "coffee-ldr"
version = "0.1.0"
authors = ["biscoito <biscoito@riseup.net>"]
description = "Coffee: A COFF loader made in Rust"
license = "GPL-3.0-or-later"
homepage = "https://github.com/hakaioffsec/coffee"
repository = "https://github.com/hakaioffsec/coffee"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size on release.
strip = "debuginfo"
codegen-units = 1
opt-level = "z" 
lto = true

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }     # For command line parsing.
tracing-subscriber = "0.3.17"                           # For logging.
color-eyre = "0.6.2"                                    # For error handling.
goblin = { version = "0.7.1", features = ["alloc"] }    # For parsing COFF files. object can be used too.
widestring = "1.0.2"                                    # For wide string support.
tracing = "0.1.37"                                      # For logging.                                    
printf-compat = "0.1.1"                                 # For printf formatting.
byteorder = "1.4.3"                                     # For endianess conversion.

# Windows APIs.
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
] }

# Pure type definitions for Windows APIs.
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
] }
