[package]
name = "coffee-ldr"
version = "0.2.1"
authors = ["biscoito <biscoito@riseup.net>"]
description = "Coffee: A COFF loader made in Rust"
documentation = "https://docs.rs/coffee-ldr/latest"
license = "GPL-3.0-or-later"
homepage = "https://github.com/hakaioffsec/coffee"
repository = "https://github.com/hakaioffsec/coffee"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size on release.
strip = "debuginfo"
codegen-units = 1
opt-level = "z"
lto = true

[dependencies]
base64 = "0.22.1" # For base64 decoding binary arguments.
byteorder = "1.5.0" # For endianess conversion.
clap = { version = "4.5.60", features = ["derive"] } # For command line parsing.
color-eyre = "0.6.5" # For error handling.
goblin = { version = "0.10.5", features = [
    "alloc",
] } # For parsing COFF files. object can be used too.
tracing = "0.1.44" # For logging.                                    
tracing-subscriber = "0.3.22" # For logging.
widestring = "1.2.1" # For wide string support.

# Windows APIs.
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }

# Pure type definitions for Windows APIs.
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }
